# markdown-reader

./: .gitignore  CLAUDE.md  README.md  package.json
.github/workflows/: release.yml
docs/: auto-update.md  code-signing.md
integrations/linux/: md-reader.desktop
integrations/windows/: install-context-menu.ps1  md-reader.bat  uninstall-context-menu.ps1
src/: browser-script.ts  browser-styles.ts  cli.ts  converter.ts  latex-font.ts  opener.ts  pdf.ts  set-default.ts  styles.ts  template.ts  watcher.ts
tauri-app/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
tauri-app/src/: app.css  main.ts  toc.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: main.rs
test/: fixture.md
